--- a/src/components/CoinPriceList/styles.module.css
+++ b/src/components/CoinPriceList/styles.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 30px;
   gap: 20px;
   width: 80%;
 }
