--- a/src/components/CoinsList/styles.css
+++ b/src/components/CoinsList/styles.css
@@ -39,3 +39,22 @@
   align-items: end;
   gap: 6px;
 }
+
+.coin-animate-enter {
+  opacity: 0;
+  transform: translateX(50px);
+}
+.coin-animate-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 500ms ease-in;
+}
+.coin-animate-exit {
+  opacity: 1;
+  transform: translateX(0);
+}
+.coin-animate-exit-active {
+  opacity: 0;
+  transform: translateX(50px);
+  transition: all 500ms ease-in;
+}
