add chart with coin price on the coin page

--- a/src/components/CoinPriceList/styles.module.css
+++ b/src/components/CoinPriceList/styles.module.css
@@ -26,3 +26,9 @@
   background-color: aliceblue;
   border-radius: 20px;
 }
+
+.price-chart,
+.coin-chart {
+  overflow-x: scroll;
+  width: 100%;
+}
